Move static methods from Main.java to NexusApplication.java

--- a/src/main/html/assets/nexus/css/settings.css
+++ b/src/main/html/assets/nexus/css/settings.css
@@ -1,3 +1,11 @@
+.settings-card {
+    display: none;
+}
+
+.settings-card.active {
+    display: flex;
+}
+
 table.table {
     border-radius: 0 0 var(--bs-border-radius) var(--bs-border-radius);
     overflow: hidden;
