--- a/src/main/html/assets/nexus/css/settings.css
+++ b/src/main/html/assets/nexus/css/settings.css
@@ -18,6 +18,7 @@ table.table {
         }
 
         tr {
+
             td {
                 position: relative;
                 padding: 0.5rem 1rem;
@@ -25,6 +26,15 @@ table.table {
 
                 * {
                     transition: all 0.15s ease;
+                }
+
+                i {
+                    opacity: 0.25;
+                }
+
+                i:hover {
+                    cursor: help;
+                    opacity: 0.5;
                 }
 
                 select {
