--- a/src/main/html/assets/nexus/css/shared.css
+++ b/src/main/html/assets/nexus/css/shared.css
@@ -183,15 +183,6 @@ button {
 body {
     background: var(--nex-bg);
 
-    .glass {
-        background: #ffffff10;
-        backdrop-filter: blur(16px);
-
-        .card-header {
-            background: #ffffff10;
-        }
-    }
-
     #titlebar {
         display: none !important;
     }
@@ -209,6 +200,16 @@ body {
             flex: 0 0 auto;
             overflow: hidden;
             overflow-y: scroll;
+
+            img {
+                display: none;
+                transition: all 0.25s ease;
+                position: absolute;
+                width: 0;
+                height: 4rem;
+                object-fit: contain;
+                margin: 1.5rem 1rem 1rem 1rem;
+            }
 
             ul {
                 margin-top: 5rem;
@@ -262,6 +263,10 @@ body {
 
         #menu.active {
             width: 18rem;
+
+            img {
+                width: 16rem;
+            }
 
             ul {
                 li {
@@ -349,6 +354,10 @@ body {
                 }
             }
 
+            .card-header:hover {
+                background: var(--bs-dark-bg-subtle);
+            }
+
             .card-body {
                 width: 100%;
                 height: 4rem;
@@ -356,8 +365,22 @@ body {
                 justify-content: center;
                 align-items: center;
 
-                i {
+                * {
                     transition: all 0.15s ease;
+                }
+
+                span {
+                    margin: 0.25rem;
+                    padding: 0.5rem;
+                    text-overflow: ellipsis;
+                    border-radius: var(--bs-border-radius-lg);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: 1px solid transparent;
+                }
+
+                i {
                     width: 2.75rem;
                     height: 2.75rem;
                     margin: 0.25rem;
@@ -370,10 +393,16 @@ body {
                     border: 1px solid transparent;
                 }
 
-                i:hover {
+                i:hover, span:hover {
                     cursor: pointer;
                     background: linear-gradient(45deg, var(--bs-dark), var(--bs-dark-bg-subtle));
                     border: 1px solid var(--bs-border-color);
+                }
+
+                span.text:hover {
+                    cursor: unset;
+                    border: 1px solid transparent;
+                    background: var(--bs-dark-bg-subtle);
                 }
             }
         }
@@ -530,6 +559,33 @@ body {
             height: 100%;
             box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.5);
             pointer-events: none;
+        }
+    }
+
+    .glass {
+        background: #ffffff10;
+        backdrop-filter: blur(16px);
+
+        .card-header {
+            background: #ffffff10;
+        }
+
+        .card-header:hover {
+            background: #ffffff20 !important;
+        }
+    }
+
+    .glass.inlined {
+        background: none !important;
+        backdrop-filter: none !important;
+
+        * {
+            backdrop-filter: none !important;
+        }
+
+        .card-header:hover {
+            backdrop-filter: none !important;
+            background: none !important;
         }
     }
 }
