--- a/src/main/html/assets/nexus/css/shared.css
+++ b/src/main/html/assets/nexus/css/shared.css
@@ -3,7 +3,32 @@
     --nex-fg: #ededed;
     --nex-iv: white;
 
-    --nex-purple: #8732EC;
+    --nex-darker: #00000010;
+    --nex-brighter: #ffffff10;
+    --nex-darker-100: #00000020;
+    --nex-brighter-100: #ffffff20;
+    --nex-darker-200: #00000030;
+    --nex-brighter-200: #ffffff30;
+    --nex-darker-300: #00000040;
+    --nex-brighter-300: #ffffff40;
+    --nex-darker-400: #00000050;
+    --nex-brighter-400: #ffffff50;
+    --nex-darker-500: #00000060;
+    --nex-brighter-500: #ffffff60;
+    --nex-darker-600: #00000070;
+    --nex-brighter-600: #ffffff70;
+    --nex-darker-700: #00000080;
+    --nex-brighter-700: #ffffff80;
+    --nex-darker-800: #00000090;
+    --nex-brighter-800: #ffffff90;
+    --nex-darker-900: #000000;
+    --nex-brighter-900: #ffffff;
+
+    --nex-animation-speed-fast: 0.05s;
+    --nex-animation-speed: 0.15s;
+    --nex-animation-speed-slow: 0.25s;
+
+    --nex-purple: #8732ec;
     --nex-purple-accent: color-mix(in srgb, var(--nex-purple), white 25%);
     --nex-purple-dark: color-mix(in srgb, var(--nex-purple), black 25%);
     --nex-purple-darker: color-mix(in srgb, var(--nex-purple), black 50%);
@@ -203,7 +228,7 @@ body {
 
             img {
                 display: none;
-                transition: all 0.25s ease;
+                transition: all var(--nex-animation-speed) ease;
                 position: absolute;
                 width: 0;
                 height: 4rem;
@@ -281,7 +306,7 @@ body {
         }
 
         .menu-panel {
-            transition: all 0.15s ease;
+            transition: all var(--nex-animation-speed) ease;
             position: absolute;
             bottom: -4rem;
             z-index: 1;
@@ -293,7 +318,7 @@ body {
             height: 6.5rem;
 
             * {
-                transition: background-color 0.15s ease;
+                transition: background-color var(--nex-animation-speed) ease;
             }
 
             .card-header {
@@ -318,7 +343,7 @@ body {
                 }
 
                 i {
-                    transition: all 0.15s ease;
+                    transition: all var(--nex-animation-speed) ease;
                     position: relative;
                     font-size: 1.25rem;
                     margin: 0.3rem;
@@ -366,7 +391,7 @@ body {
                 align-items: center;
 
                 * {
-                    transition: all 0.15s ease;
+                    transition: all var(--nex-animation-speed) ease;
                 }
 
                 span {
@@ -427,7 +452,7 @@ body {
 
         .menu-panel.inlined {
             box-shadow: none !important;
-            transition: all 0.15s ease;
+            transition: all var(--nex-animation-speed) ease;
             backdrop-filter: none;
             bottom: -7rem;
             background: none;
@@ -469,11 +494,11 @@ body {
         }
 
         #menu.transition {
-            transition: width 0.25s ease;
+            transition: width var(--nex-animation-speed-slow) ease;
 
             ul {
                 li {
-                    transition: all 0.25s ease;
+                    transition: all var(--nex-animation-speed-slow) ease;
                 }
             }
         }
@@ -504,16 +529,36 @@ body {
                 height: calc(100% + 1rem);
                 box-shadow: 0 0 0.5rem #00000075;
 
-                button {
+                button, select {
                     text-align: left;
+                    background: var(--nex-darker-300);
                     border-radius: var(--bs-border-radius-lg);
                     overflow: hidden;
                     margin: 0 0.5rem;
                     font-size: 1.05rem;
+                    width: calc(100% - 1rem);
                     box-shadow: 0 0 0.5rem #00000075;
+                    border: 1px solid var(--bs-dark-border-subtle);
+                    padding: 0.25rem 0.5rem;
 
                     white-space: nowrap;
                     text-overflow: ellipsis;
+                }
+
+                button:hover, select:hover {
+                    cursor: pointer;
+                    background: var(--nex-darker-600);
+                    border: 1px solid var(--bs-light-border-subtle);
+                }
+
+                .d-flex {
+                    margin: 0 0.5rem;
+                    gap: 0.3rem;
+
+                    button {
+                        margin: 0;
+                        width: fit-content;
+                    }
                 }
 
                 button.active {
@@ -524,6 +569,11 @@ body {
                 }
 
                 h6 {
+                    overflow: hidden;
+                    height: 1.25rem;
+                    max-width: calc(100% - 2rem);
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
                     margin: 0.15rem 0.65rem 0 0.65rem;
                     padding: 0;
                     opacity: 0.8;
@@ -535,7 +585,52 @@ body {
                     flex-direction: column;
                     flex: 0 0 auto;
                     gap: 0.4rem;
+                    padding-bottom: 0.5rem;
+
+                    a {
+                        cursor: pointer;
+                        position: absolute;
+                        right: 0.4rem; top: 0;
+                        color: unset;
+                        font-size: 1rem;
+                        rotate: 90deg;
+                        padding: 0.1rem 0 0.1rem 0;
+                    }
+
+                    a.active {
+                        rotate: 0deg;
+                    }
                 }
+
+                .submenu-group:hover {
+                    h6 {
+                        max-width: calc(100% - 3rem);
+                    }
+                }
+
+                .submenu-group.nex-primary {
+                    background-color: color-mix(in srgb, var(--nex-primary-darker), transparent 75%);
+                }
+
+                .submenu-group.nex-blue {
+                    background-color: color-mix(in srgb, var(--nex-blue-darker), transparent 75%);
+                }
+
+                .submenu-group.nex-purple {
+                    background-color: color-mix(in srgb, var(--nex-purple-darker), transparent 75%);
+                }
+                .submenu-group.nex-green {
+                    background-color: color-mix(in srgb, var(--nex-green-darker), transparent 75%);
+                }
+
+                .submenu-group.nex-red {
+                    background-color: color-mix(in srgb, var(--nex-red-darker), transparent 75%);
+                }
+
+                .submenu-group.nex-yellow {
+                    background-color: color-mix(in srgb, var(--nex-yellow-darker), transparent 75%);
+                }
+
 
                 ul {
                     margin: 0;
