Update library UI

--- a/src/main/html/assets/nexus/css/settings.css
+++ b/src/main/html/assets/nexus/css/settings.css
@@ -1,3 +1,12 @@
+#content {
+    background: url("https://www.wolkenspeicher.cloud/index.php/s/5KHwRFRHF7bGQeg/download") fixed !important;
+    background-size: cover !important;
+}
+
+#settings {
+    background: linear-gradient(-45deg, #00000090, #00000085);
+}
+
 .settings-card {
     display: none;
 }
