--- a/src/main/html/assets/nexus/css/library.css
+++ b/src/main/html/assets/nexus/css/library.css
@@ -1,10 +1,10 @@
 #content {
-    background: url("https://b.nerotv.live/zyneon/nexus/img/instances/zyneonplus/1.21/2025.3-background.webp") fixed !important;
+    background: url("https://www.wolkenspeicher.cloud/index.php/s/5KHwRFRHF7bGQeg/download") fixed !important;
     background-size: cover !important;
 }
 
 #library {
-    background: linear-gradient(-45deg, #00000060, #00000080);
+    background: linear-gradient(-45deg, #00000090, #00000085);
     position: relative;
     width: 100%;
     height: 100%;
@@ -17,53 +17,16 @@
         width: 100%;
     }
 
-    #library-menu {
-        background: var(--nex-brighter-100);
-
-        .buttons {
-            margin-right: 0.15rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-
-            a {
-                display: flex;
-                width: 3rem;
-                height: 2rem;
-                background: var(--nex-brighter-100);
-                border: 1px solid var(--bs-border-color-translucent);
-                font-size: 1.15rem;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                margin-right: 0.5rem;
-                border-radius: var(--bs-border-radius-lg);
-                color: unset;
-                text-decoration: none;
-                transition: all var(--nex-animation-speed) ease;
-
-                i {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    text-align: center;
-                    transition: all var(--nex-animation-speed) ease;
-                }
-            }
-
-            a:hover {
-                cursor: pointer;
-                background: var(--nex-brighter-300);
-                box-shadow: 0 0 0.4rem #00000050;
-            }
-
-            a.settings:hover {
-                i {
-                    rotate: 360deg;
-                    transition: all 2s ease;
-                }
-            }
-        }
+    #launch-button {
+        position: absolute;
+        bottom: 0.6rem;
+        right: 0.6rem;
+        font-size: 2rem;
+        font-weight: bold;
+        width: calc(100% - 1.2rem) !important;
+        padding: 1rem 0;
+        box-shadow: 0 0 0.5rem black;
+        border: 3px solid var(--bs-border-color-translucent);
+        letter-spacing: 0.5rem;
     }
 }
