--- a/src/main/html/assets/nexus/css/shared.css
+++ b/src/main/html/assets/nexus/css/shared.css
@@ -512,6 +512,115 @@ body {
             border-top: 1px solid var(--bs-border-color);
             overflow: hidden;
 
+            .nex-side-view {
+                display: flex;
+                width: 100%;
+                height: 100%;
+                padding: 0 !important;
+                margin: 0 !important;
+
+                text-shadow: 0 0 0.33rem black;
+
+                * {
+                    text-shadow: 0 0 0.33rem black;
+                }
+
+                div {
+                    flex: 1;
+                    padding: 0.5rem;
+                    overflow: auto;
+                }
+
+                div.glass {
+                    width: fit-content;
+                    max-width: 25rem;
+                    background: #ffffff01;
+                    border-left: 1px solid var(--bs-border-color-translucent);
+
+                    .badge {
+                        text-shadow: none !important;
+                        box-shadow: 0 0 0.4rem #00000050;
+                        margin: 0.25rem 0.25rem 0.25rem 0;
+                        border: 1px solid var(--bs-border-color-translucent);
+                    }
+
+                    .card {
+                        background: var(--nex-brighter-100);
+                        border: 1px solid var(--bs-border-color-translucent);
+                        max-height: 30%;
+                        padding: 0;
+                        margin-bottom: 0.75rem;
+
+                        .card-header {
+                            background: var(--nex-brighter-100);
+                            color: var(--nex-fg);
+                            min-height: fit-content;
+                        }
+
+                        .card-body {
+                            padding: 0.5rem;
+                            margin: 0;
+                            overflow: auto;
+
+                            h4 {
+                                margin: 0;
+                                padding: 0;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .title-menu {
+                background: var(--nex-brighter-100);
+
+                .buttons {
+                    margin-right: 0.15rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+
+                    a {
+                        display: flex;
+                        width: 3rem;
+                        height: 2rem;
+                        background: var(--nex-brighter-100);
+                        border: 1px solid var(--bs-border-color-translucent);
+                        font-size: 1.15rem;
+                        justify-content: center;
+                        align-items: center;
+                        text-align: center;
+                        margin-right: 0.5rem;
+                        border-radius: var(--bs-border-radius-lg);
+                        color: unset;
+                        text-decoration: none;
+                        transition: all var(--nex-animation-speed) ease;
+
+                        i {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            text-align: center;
+                            transition: all var(--nex-animation-speed) ease;
+                        }
+                    }
+
+                    a:hover {
+                        cursor: pointer;
+                        background: var(--nex-brighter-300);
+                        box-shadow: 0 0 0.4rem #00000050;
+                    }
+
+                    a.settings:hover {
+                        i {
+                            rotate: 360deg;
+                            transition: all 2s ease;
+                        }
+                    }
+                }
+            }
+
             .nex-flex {
                 height: calc(100% - 2rem);
                 padding: 0.5rem;
@@ -532,14 +641,14 @@ body {
 
                 button, select {
                     text-align: left;
-                    background: var(--nex-darker-300);
                     border-radius: var(--bs-border-radius-lg);
                     overflow: hidden;
                     margin: 0 0.5rem;
                     font-size: 1.05rem;
                     width: calc(100% - 1rem);
                     box-shadow: 0 0 0.5rem #00000075;
-                    border: 1px solid var(--bs-dark-border-subtle);
+                    border: 1px solid var(--bs-border-color-translucent);
+                    background: #ffffff05 !important;
                     padding: 0.25rem 0.5rem;
 
                     white-space: nowrap;
@@ -548,8 +657,8 @@ body {
 
                 button:hover, select:hover {
                     cursor: pointer;
-                    background: var(--nex-darker-600);
-                    border: 1px solid var(--bs-light-border-subtle);
+                    background: var(--nex-brighter-100) !important;
+                    border: 1px solid var(--bs-border-color-translucent);
                 }
 
                 .d-flex {
@@ -724,4 +833,9 @@ body {
             background: var(--nex-primary) !important;
         }
     }
+}
+
+.card {
+    padding: 0;
+    text-shadow: none;
 }
